final version for control

--- a/src/app/main-content/above-the-folder/above-the-folder.component.scss
+++ b/src/app/main-content/above-the-folder/above-the-folder.component.scss
@@ -94,6 +94,7 @@ app-navdots {
 
 @media(max-width: 1213px) {
     .atf_left {margin-left: 0;}
+    .arrow {bottom: 54px;}
 }
 
 @media (max-width: 1155px) {
