--- a/src/app/main-content/above-the-folder/above-the-folder.component.html
+++ b/src/app/main-content/above-the-folder/above-the-folder.component.html
@@ -7,7 +7,7 @@
                 <h1 class="fontEckzar">Barbora Lambeinova</h1>
                 <span class="fontQuicksand">Frontend {{ 'above_the_folder.job' | translate }}</span>
             </div>
-            <a href="#contact"><button class="btn fontQuicksand">Get in Touch</button></a>
+            <a href="#contact"><button class="btn fontQuicksand">{{ 'buttons.section01' | translate }}</button></a>
             <div class="scroll_element">
                 <img class="rotating" src="./assets/animation_wheels/scroll_sun.svg" alt="wheel with 'scroll down' text">
                 <img class="arrow" src="./assets/animation_wheels/white_arrow.svg" alt="white arrow">
