--- a/src/app/main-content/contact/contact.component.html
+++ b/src/app/main-content/contact/contact.component.html
@@ -24,6 +24,6 @@
 
     </div>
 
-    <app-footer></app-footer>
+    <app-footer [isContactSection]="contactSection" ></app-footer>
     
 </section>
